2001-05-07	Joel Sherrill <joel@OARcorp.com>

	* cpu_asm.S: Merged patches from Gregory Menke
	<Gregory.D.Menke.1@gsfc.nasa.gov> that clean up
	stack usage and include nops in the delay slots.

2001-04-20	Joel Sherrill <joel@OARcorp.com>

	* cpu_asm.S: Added code to save and restore SR and EPC to
	properly support nested interrupts.  Note that the ISR
	(not RTEMS) enables interrupts allowing the nesting to occur.

2001-03-14	Joel Sherrill <joel@OARcorp.com>

	* cpu.c, rtems/score/cpu.h, rtems/score/mipstypes.h:
	Removed unused variable _CPU_Thread_dispatch_pointer
	and cleaned numerous comments.
	
2001-03-13	Joel Sherrill <joel@OARcorp.com>

	* cpu.c, cpu_asm.S, iregdef.h, rtems/score/cpu.h, rtems/score/mips.h:
	Merged MIPS1 and MIPS3 code reducing the number of lines of assembly.
	Also reimplemented some assembly routines in C further reducing
	the amount of assembly and increasing maintainability.

2001-02-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am, rtems/score/Makefile.am: 
	Apply include_*HEADERS instead of H_FILES.

2001-01-12	Joel Sherrill <joel@OARcorp.com>

	* rtems/score/mips.h (mips_get_sr, mips_set_sr): Corrected
	register constraints from "general" to "register".

2001-01-09	Joel Sherrill <joel@OARcorp.com>

	* cpu_asm.S: Use SR_INTERRUPT_ENABLE_BITS instead of SR_XXX constants
	to make it easier to conditionalize the code for various ISA levels.

2001-01-08	Joel Sherrill <joel@OARcorp.com>

	* idtcpu.h: Commented out definition of "wait".  It was stupid to
	use such a common word as a macro.
	* rtems/score/cpu.h (_CPU_ISR_Disable): Fixed for mips ISA 3.
	* rtems/score/mips.h: Added include of <idtcpu.h>.
	* rtems/score/mips.h (mips_enable_in_interrupt_mask): Corrected.

2001-01-03	Joel Sherrill <joel@OARcorp.com>

	* rtems/score/cpu.h: Added _CPU_Initialize_vectors().
	* cpu_asm.S: Eliminated warning for duplicate definition of EXTERN.

2000-12-19	Joel Sherrill <joel@OARcorp.com>
